--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 theme: jekyll-theme-minimal
 title: MLM: Modified Lee-More Model
+remote_theme: "godalming123/minimal"
+plugins:
+- jekyll-remote-theme
