--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,3 @@
-title: MLM: Modified Lee-More Model
-# logo: /assets/img/logo.png
-description: testing
-show_downloads: true
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
-remote_theme: "godalming123/minimal"
-color-scheme: dark
