--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: MLM: Modified Lee-More Model
+description: Python library that computes electronic transport properties based on the Lee-More conductivity model. 
+show_downloads: true
