--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: MLM: Modified Lee-More Model
-description: Python library that computes electronic transport 
+title: Modified Lee-More Model (MLM)
+description: Python library that computes electronic transport properties of dense plasmas based on the Lee-More conductivity model. 
